# Evalops

./: .dockerignore  .gitignore  AGENTS.md  CODE_REVIEW.md  EXECUTION_PLAN.md  FIX_VERIFICATION.md  Jenkinsfile  Makefile  PHASE_A_VERIFICATION.md  README.md  SECURITY_AUDIT.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_tables.py
backend/: __init__.py  cli.py
backend/analyzer/: failure_clustering.py  regression_detector.py
backend/api/: app.py  dependencies.py  schemas.py  websocket.py
backend/api/routes/: diagnosis.py  documents.py  evals.py  optimization.py  pipelines.py  plugins.py  settings.py  traces.py  tuning.py
backend/core/: config.py  llm_client.py  local_model_stats.py  pipeline.py  tracer.py
backend/db/: __init__.py  in_memory_repositories.py  models.py  mongo_mirror.py  repositories.py  repository.py  session.py
backend/diagnosis/: __init__.py  counterfactual.py  historical_analyzer.py  recommender.py
backend/eval/: __init__.py  blame_attribution.py  engine.py  llm_judge.py  models.py  similarity.py  trajectory_scorer.py
backend/eval/metrics/: __init__.py  base.py  context_relevance.py  cost_efficiency.py  faithfulness.py  guardrail_fp_rate.py  tool_call_accuracy.py  trajectory_coherence.py
backend/guardrails/: __init__.py  compounding_analyzer.py  stack.py
backend/guardrails/filters/: __init__.py  base.py  citation_validator.py  faithfulness_check.py  pii.py  prompt_injection.py  toxicity.py
backend/optimization/: __init__.py  auto_deploy.py  cost_tracker.py  experiment_tracker.py
backend/optimizer/: config_sweeper.py  ft_trigger.py  guardrail_tuner.py  pareto_optimizer.py
backend/plugins/: __init__.py  async_utils.py  discovery.py  loader.py  marketplace.py  registry.py  sdk.py  security.py
backend/plugins/packs/: __init__.py  (+1 more)
backend/tuning/: __init__.py  config_schema.py  filter_configurator.py  metric_selector.py  optimization_config.py  preset_manager.py  smart_defaults.py  user_preferences.py
docker/: Dockerfile.backend  docker-compose.yml
evalops-sdk/: pyproject.toml
evalops-sdk/evalops_sdk/: __init__.py  config.py  filters.py  metrics.py  testing.py
evalops-sdk/examples/: custom_filter.py  custom_metric.py
frontend/: .dockerignore  Dockerfile  package-lock.json
scripts/: security-scan.sh
tests/: conftest.py
tests/integration/: test_api.py  test_phase1_db.py
tests/unit/: test_analyzers.py  test_blame_attribution.py  test_blame_timing_integration.py  test_cli.py  test_compounding.py  test_config.py  test_eval_engine.py  test_guardrails.py  test_llm_client.py  test_local_model_stats.py  test_metrics.py  test_mongo_mirror.py  test_optimizer.py  test_phase1_plugins.py  test_phase3_ux.py  test_phase4_plugins.py  test_pipeline.py  test_providers.py  test_settings_routes.py  test_similarity.py  test_tracer.py
(+28 files in other folders)
