[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalops"
version = "0.1.0"
description = "Unified Full-Pipeline Evaluation & Optimization Platform"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "EvalOps Team" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "celery[redis]>=5.4.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "optuna>=4.0.0",
    "numpy>=1.26.0",
    "packaging>=24.0.0",
]

[project.entry-points."evalops.plugins"]
# Third-party plugins register here, e.g.:
# my_metric = "my_package:MyMetricPlugin"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.8.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
