[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalops-sdk"
version = "0.1.0"
description = "SDK for building EvalOps plugins — metrics, filters, optimizers, and integrations"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "EvalOps Team" }]
keywords = ["evalops", "llm-evaluation", "plugins", "guardrails"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.entry-points."evalops.plugins"]
# Plugin authors register their entry points here, e.g.:
# my_metric = "my_package.metrics:MyMetricPlugin"

[tool.hatch.build.targets.wheel]
packages = ["evalops_sdk"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
